# holochain-rust-client-demo

./: .gitignore  Cargo.toml  README.md  flake.nix  package-lock.json  package.json
tests/: hello-world.test.ts  package.json
ui/: package.json
zome-client/: Cargo.toml
zome-client/src/: lib.rs  main.rs
