[package]
name = "zome_client"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
anyhow = "1.0"
indexmap = "2"
tokio = { version = "1.35.1", features = ["full"] }
holochain_client = "0.7.0-dev.1"
holochain_conductor_api = "0.5.0-dev.17"
holochain_types = "0.5.0-dev.17"
holochain_zome_types = "0.5.0-dev.16"
holochain_websocket = "0.5.0-dev.17"

[lib]
name = "zome_client"  # Library name (matches project name)
path = "src/lib.rs"

#[[bin]]
#name = "zome-client"
#path = "src/lib.rs"
